@startuml StatementTokeniser
hide empty description
top to bottom direction
state NewToken
State Numerical: consumes
state String : consumes
state Variable: consumes
state Operator: consumes
state Parentases: Consumes
state CompleteToken
state Error
state TypeOfToken : consumes whitespace
state ToExit <<choice>>

[*] --> NewToken
NewToken --> TypeOfToken
TypeOfToken --> Numerical : IsDigit
TypeOfToken --> Operator : IsOperator
TypeOfToken --> Error : else
TypeOfToken --> String : is double qoute
TypeOfToken --> Variable : is backtick
TypeOfToken --> Parentases
Numerical --> Numerical : IsAlphaDigit
Numerical --> CompleteToken : else
Operator --> Operator : IsOperator
Operator --> CompleteToken : else
String --> String : not double
String --> CompleteToken : else
Variable --> Variable : not backtick
Variable  --> CompleteToken : else
Parentases  --> CompleteToken
CompleteToken --> ToExit


ToExit --> NewToken : else
ToExit --> [*] : EOF
Error --> [*]
@enduml